fix: controlbar should always take full width, and other minor position adjustments (#1563)
* controlbar should take full width
* avoid scrollbar on chips when it doesn't fill width
* more space below search field in sm screen
* align the search icon

--- a/src/components/ControlBar/ViewControlBar/styles/Content.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/Content.module.css
@@ -24,6 +24,7 @@
 
     .controlsSmall {
         display: block;
+        margin-bottom: var(--spacers-dp4);
     }
 
     .controlsLarge {
@@ -53,6 +54,7 @@
 
     .chipsContainer {
         margin-bottom: -4px;
+        padding-right: 2px;
     }
 
     .expanded .chipsContainer {
