--- a/src/components/ControlBar/ViewControlBar/styles/DashboardsBar.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/DashboardsBar.module.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     height: var(--user-rows-height);
+    width: 100%;
 }
 
 .content {
